# mod-ttymidi

./: .gitignore  CMakeLists.txt  Makefile  README
src/: raw.txt  ttymidi.c
test/: example-bash.py  example-python.py  serial-fuzzy-write.py
